DSO-11255 | Roman | added the description about himself

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage!</title>
+    <title>About Roman</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p>
+      Roman is software professional, proven time and again in successfully developing and providing an architecture for highly scalable web applications, big data, business analytics, cloud computing and mobile projects. He is experienced developing with traditional and Agile software development approaches. Possesses excellent understanding of the interdependencies of computer architectures, operating systems, and end-user computer interfaces. Promotes marketing and competitive analysis in addressing customer’s business needs.
+<br/>
+Specialties: Cloud Computing, Big Data Analytics, NoSQL DB, Agile Software Development and Architecture in Java, C#, Scala; Enterprise Architecture; Service-Oriented Architecture, High-Performance Computing, Software As A Service deployments. 
+    </p>
   </body>
 </html>
